pbc_contract_codegen/tests/action/fail/zk/missing_zk_state_action.stderr
error: custom attribute panicked
 --> tests/action/fail/zk/missing_zk_state_action.rs:5:1
  |
5 | #[action]
  | ^^^^^^^^^
  |
  = help: message: Functions annotated with this macro must have at least 3 arguments, but had only 2
